--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Chat Room</title>
   <link rel="shortcut icon" href="img/text.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
+  <script src="firebase-app.js"></script>
+  <script src="firebase-firestore.js"></script>
   <link href="/assets/fontawesome/css/all.css" rel="stylesheet" />
 </head>
 <body>
@@ -38,7 +38,7 @@
   </div>
 
   <footer>
-    <div class="madeby">Made by <a href="https://sprintingsnail69.github.io" target="_blank">SprintingSnail69</a> and <a href="https://cobblesteve01.github.io" target="_blank">cobblesteve01</a></div >
+    <div class="madeby">Made by <a href="https://sprintingsnail69.github.io" target="_blank">SprintingSnail69</a> and <a href="https://cobblesteve01.github.io" target="_blank">cobblesteve01</a></div>
   </footer>
 
   <div id="toast2" class="toast2"><i class="fa-regular fa-circle-check" style="scale: 175%; color: rgb(0, 179, 0);;"></i>&nbsp;Room code copied to clipboard!</div>
